# amentia

./: .editorconfig  .gitignore  .swiftlint.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/amentia-core/: Cargo.toml
crates/amentia-core/src/: lib.rs  test_support.rs  tests.rs  tests_approval_shell.rs  tests_approval_write.rs  tests_memory_context.rs  tests_plugin_bundled_connectors.rs  tests_plugin_command_execution.rs  tests_plugin_connector_smoke.rs  tests_plugin_lifecycle.rs  tests_plugin_mcp_output.rs  tests_plugin_permissions.rs  tests_plugin_registry.rs  tests_runtime_surface.rs  tests_turn_lifecycle.rs  tests_turn_web_search.rs  tests_turn_workspace_tools.rs  tests_workspace_state.rs
crates/amentia-core/src/context/: context_compaction.rs  context_lifecycle.rs  context_memory.rs  context_memory_budget.rs  context_memory_prompt.rs  context_memory_selection.rs  context_observation.rs  context_persistence.rs  context_plugin_skill_pack.rs  context_plugins.rs  intent_file.rs  intent_inference.rs  intent_web_search.rs  intent_write.rs  local_response_approval.rs  local_response_files.rs  local_response_formatting.rs  local_response_generation.rs  local_response_plan.rs  local_response_search.rs  local_response_shell.rs  local_response_summaries.rs  local_response_web_search.rs  memory_context_types.rs  mod.rs
crates/amentia-core/src/plugins/: mod.rs  plugin_builtin_readme.rs  plugin_builtin_review.rs  plugin_builtin_shell.rs  plugin_catalog_state.rs  plugin_command_approval.rs  plugin_command_artifacts.rs  plugin_command_builtins.rs  plugin_command_completion.rs  plugin_command_execution.rs  plugin_command_git.rs  plugin_command_handoff.rs  plugin_command_handoff_attributes.rs  plugin_command_input_contract.rs  plugin_command_mcp_output.rs  plugin_command_mcp_output_protocol.rs  plugin_command_mcp_runner.rs  plugin_command_mcp_session.rs  plugin_command_mcp_target.rs  plugin_command_memory.rs  plugin_command_memory_body.rs  plugin_command_memory_tags.rs  plugin_command_permission_gate.rs  plugin_command_preparation.rs  plugin_command_preparation_error.rs  plugin_command_readiness.rs  plugin_command_recovery_hints.rs  plugin_command_runner.rs  plugin_command_runner_attribute_policy.rs  plugin_command_runner_contracts.rs  plugin_command_runner_memory.rs  plugin_command_runner_output.rs  plugin_command_runner_output_parser.rs  plugin_command_runner_output_tests.rs  plugin_command_runner_process.rs  plugin_command_runner_proof.rs  plugin_command_runner_remote_write_proof.rs  plugin_command_runner_remote_write_receipt.rs  plugin_command_runner_sandbox.rs  plugin_command_runner_setup.rs  (+26 more)
crates/amentia-core/src/requests/: approval_agent_context.rs  approval_completion.rs  approval_execution.rs  approval_execution_approved.rs  approval_execution_denied.rs  approval_execution_events.rs  approval_execution_shell.rs  approval_execution_timeline.rs  approval_execution_write.rs  approval_requests.rs  memory_requests.rs  model_requests.rs  request_dispatch.rs  request_params.rs  request_state.rs  server_requests.rs  thread_change_requests.rs  thread_requests.rs  turn_requests.rs  workspace_requests.rs
crates/amentia-core/src/runtime/: mod.rs  protocol_adapters.rs  protocol_memory_adapters.rs  protocol_model_adapters.rs  protocol_plugin_adapters.rs  protocol_plugin_registry_adapters.rs  protocol_plugin_registry_mappers.rs  protocol_plugin_summary_adapters.rs  runtime_context.rs  runtime_execution.rs  runtime_execution_approvals.rs  runtime_execution_running.rs  runtime_identity.rs  (+22 more)
crates/amentia-runtime-bin/: Cargo.toml
crates/amentia-runtime-bin/src/: main.rs  notification_loop.rs  request_router.rs  request_supervisor.rs  runtime_lock.rs
crates/amentia-storage/: Cargo.toml
crates/amentia-storage/src/: changes.rs  lib.rs  memory.rs  paths.rs  tests.rs  threads.rs  types.rs  workspace.rs
crates/cavell-core/: Cargo.toml
crates/cavell-core/src/: lib.rs
crates/pith-core/: Cargo.toml
crates/pith-core/src/: active_turns.rs  approval_requests.rs  approval_state.rs  context_compaction.rs  context_state.rs  harness_status.rs  intent_inference.rs  lib.rs  local_responses.rs  model_requests.rs  plugin_commands.rs  plugin_hooks.rs  plugin_permissions.rs  plugin_requests.rs  request_params.rs  request_state.rs  runtime_context.rs  runtime_readiness.rs  server_requests.rs  test_support.rs  tests.rs  tests_approval_execution.rs  tests_approval_shell.rs  tests_approval_write.rs  tests_memory_context.rs  tests_plugin_bundled_connectors.rs  tests_plugin_command_execution.rs  tests_plugin_connector_smoke.rs  tests_plugin_execution.rs  tests_plugin_lifecycle.rs  tests_plugin_mcp_output.rs  tests_plugin_permissions.rs  tests_plugin_registry.rs  tests_plugins.rs  tests_runtime_surface.rs  tests_turn_lifecycle.rs  tests_turn_web_search.rs  tests_turn_workspace_tools.rs  tests_workspace_state.rs  text_utils.rs  (+6 more)
crates/pith-storage/: Cargo.toml
crates/pith-storage/src/: approvals.rs  changes.rs  legacy.rs  lib.rs  memory.rs  paths.rs  plugins.rs  schema.rs  tests.rs  threads.rs  time.rs  types.rs  workspace.rs
(+881 files in other folders)
