[workspace]
members = [
  "crates/cavell-core",
  "crates/cavell-memory",
  "crates/cavell-model-runtime",
  "crates/cavell-plugin-host",
  "crates/cavell-protocol",
  "crates/cavell-runtime-bin",
  "crates/cavell-storage",
  "crates/cavell-tools",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Cavell Contributors"]

[workspace.dependencies]
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
