[workspace]
members = [
  "crates/pith-core",
  "crates/pith-memory",
  "crates/pith-model-runtime",
  "crates/pith-plugin-host",
  "crates/pith-protocol",
  "crates/pith-runtime-bin",
  "crates/pith-storage",
  "crates/pith-tools",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Pith Contributors"]

[workspace.dependencies]
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
