[workspace]
members = [
  "crates/amentia-core",
  "crates/amentia-memory",
  "crates/amentia-model-runtime",
  "crates/amentia-plugin-host",
  "crates/amentia-process",
  "crates/amentia-protocol",
  "crates/amentia-sandbox",
  "crates/amentia-runtime-bin",
  "crates/amentia-storage",
  "crates/amentia-tools",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Amentia Contributors"]

[workspace.dependencies]
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
