[package]
name = "amentia-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
amentia-memory = { path = "../amentia-memory" }
amentia-model-runtime = { path = "../amentia-model-runtime" }
amentia-plugin-host = { path = "../amentia-plugin-host" }
amentia-process = { path = "../amentia-process" }
amentia-protocol = { path = "../amentia-protocol" }
amentia-sandbox = { path = "../amentia-sandbox" }
amentia-storage = { path = "../amentia-storage" }
amentia-tools = { path = "../amentia-tools" }
