[package]
name = "amentia-runtime-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
amentia-core = { path = "../amentia-core" }
amentia-protocol = { path = "../amentia-protocol" }
