[package]
name = "amentia-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
amentia-memory = { path = "../amentia-memory" }
amentia-protocol = { path = "../amentia-protocol" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
