[package]
name = "pith-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
pith-memory = { path = "../pith-memory" }
pith-model-runtime = { path = "../pith-model-runtime" }
pith-plugin-host = { path = "../pith-plugin-host" }
pith-process = { path = "../pith-process" }
pith-protocol = { path = "../pith-protocol" }
pith-sandbox = { path = "../pith-sandbox" }
pith-storage = { path = "../pith-storage" }
pith-tools = { path = "../pith-tools" }
